--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=eduardoribeirocury@gmail.com
-default.recipient=eduardoribeirocury@gmail.com
+default.sender=edurcury98@gmail.com
+default.recipient=edurcury98@gmail.com
