Implementando autenticação e geração do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=edurcury98@gmail.com
 default.recipient=edurcury98@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarTokens
+jwt.expiration=60000
