--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=edurcury98@gmail.com
 default.recipient=edurcury98@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarTokens
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-edu
+s3.region=sa-east-1
