--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 
-default.sender=edurcury98@gmail.com
-default.recipient=edurcury98@gmail.com
+default.sender=
+default.recipient=
 
 jwt.secret=SequenciaDeCaracteresParaAssinarTokens
 jwt.expiration=86400000
@@ -13,3 +13,6 @@ s3.region=sa-east-1
 
 img.prefix.client.profile=cp
 img.profile.size=2000
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
